# EntityML

./: .gitignore  README.md  foo.py  pyproject.toml
compose/: README.md  cleanup.sh  docker-compose.yml  env.sh  prepare.sh
notebooks/: 01-tpot-per-entity.ipynb  02-tpot-polars.ipynb  02-tpot-ray.ipynb  automl.ipynb  exp and results.ipynb  scaling.d2
pipelines/kubeflow/: pipeline_tpot_SNME.py  pipeline_tpot_SNSE_parallel.py  pipeline_tpot_SNSE_sequential.py  requirements.txt  requirements_tpot.txt  vertex_config.py
synthetic_data_generator/: app.py  config_manager.py
synthetic_data_generator/streaming/: kafka_config.py  sdg_consumer.py  sdg_producer.py
